Fixes to inputs on iOS and reworked navigation icon.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -68,6 +68,7 @@ body {
 
 		@media @tablet {
 			margin: 0 0.75em 0 0;
+			max-width: 75%;
 		}
 	}
 }
@@ -134,7 +135,7 @@ body {
 
 [data-widget-type="extendednavigation"] {
 	@media @tablet {
-		position: initial;
+		position: inherit;
 	}
 }
 
@@ -193,9 +194,11 @@ body {
 
 .navigation-toggle {
 	@media @tablet {
+		height: 35px;
 		position: absolute;
 		right: 2em;
-		bottom: 15px;
+		top: 2.5em;
+		text-indent: -9999px;
 		z-index: 9999;
 	}
 }
@@ -278,6 +281,8 @@ textarea,
 .responsiveslideshow .button--pagination {
 	.button;
 	transition: border background .2s;
+	border-radius: 0;
+	-webkit-appearance: none;
 }
 
 // Button specific styles
@@ -301,11 +306,37 @@ button,
 // Nav toggle (hide on desktop)
 .navigation-toggle {
 	display: none;
-	&:after {
-		content: "\f0c9";
+
+	&:before, &:after {
+		content: "";
+		height: 2px;
+		width: 25px;
+		position: absolute;
+		left: 10px;
+		display: block;
+		background: @font-swatch6-color;
+		margin-right: 0;
+		margin-left: 0;
 	}
+	&:before {
+		top: 11px;
+	}
+	&:after {
+		bottom: 11px;
+	}
+
 	@media @tablet {
+		background-color: @font-swatch6-color;
+		background-clip: content-box;
 		display: inline-block;
+		height: 42px;
+		margin: 0;
+		padding: 19px 9px 19px 10px;
+		width: 46px;
+
+		&:hover {
+			background-color: @font-swatch6-color;
+		}
 	}
 }
 
@@ -897,6 +928,10 @@ small,
 	&__avatar-image {
 		min-width: 42px;
 		max-width: 94px;
+
+		@media @mobile {
+			max-width: 65px;
+		}
 	}
 	&__tweet-content {
 		padding-bottom: 0;
